--- a/generators/server/templates/src/main/resources/logback-spring.xml.ejs
+++ b/generators/server/templates/src/main/resources/logback-spring.xml.ejs
@@ -28,7 +28,7 @@
     <include resource="org/springframework/boot/logging/logback/base.xml"/>
 
 <!-- The FILE and ASYNC appenders are here as examples for a production configuration -->
-<%_ if (logManagementTypeEck) { _%>
+<!-- <%_ if (logManagementTypeEck) { _%>
     
     <appender name="FILE" class="ch.qos.logback.core.rolling.RollingFileAppender">
         <rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
@@ -49,7 +49,7 @@
     <root level="${logging.level.root}">
         <appender-ref ref="ASYNC"/>
     </root>
-<%_ } _%>
+<%_ } _%> -->
 
 
     <logger name="jakarta.activation" level="WARN"/>
