Added support for rabbitmq in kubernetes (#20)
* Added support for rabbitmq in kubernetes

* create exchanges per service

---------

Co-authored-by: Rohith Teja Gundimeda <rohithteja95@outlook.com>

--- a/generators/kubernetes/templates/deployment.yml.ejs
+++ b/generators/kubernetes/templates/deployment.yml.ejs
@@ -208,6 +208,12 @@ spec:
         - name: KAFKA_PRODUCER_VALUE_DESERIALIZER
           value: 'org.apache.kafka.common.serialization.StringDeserializer'
 <%_ } _%>
+<%_ if (app.messageBrokerRabbitMQ) { _%>
+        - name: SPRING_RABBITMQ_HOST
+          value: jhipster-rabbitmq.<%= kubernetesNamespace %>.svc.cluster.local
+        - name: SPRING_RABBITMQ_PORT
+          value: "5672"
+<%_ } _%>
 <%_ if (monitoringPrometheus) { _%>
         - name: MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED
           value: 'true'
