Feature/comm rabbitmq (#21)

--- a/generators/rabbitmq/templates/src/main/java/package/config/RabbitMQConfig.java.ejs
+++ b/generators/rabbitmq/templates/src/main/java/package/config/RabbitMQConfig.java.ejs
@@ -10,27 +10,27 @@ import org.springframework.context.annotation.Configuration;
 
 
 @Configuration
-public class RabbitMQConfig {
+public class RabbitMQConfig<%= uniqueName %> {
 
-    public static final String QUEUE = "<%= baseName %>_message_queue";
-    public static final String EXCHANGE = "<%= baseName %>_message_exchange";
-    public static final String ROUTING_KEY = "<%= baseName %>_message_routingKey";
+    public static final String QUEUE = "<%= queueName %>_message_queue";
+    public static final String EXCHANGE = "<%= queueName %>_message_exchange";
+    public static final String ROUTING_KEY = "<%= queueName %>_message_routingKey";
 
     @Bean
-    public Queue queue() {
+    public Queue queue<%= uniqueName %>() {
         return new Queue(QUEUE);
     }
 
     @Bean
-    public TopicExchange exchange() {
+    public TopicExchange exchange<%= uniqueName %>() {
         return new TopicExchange(EXCHANGE);
     }
 
     @Bean
-    public Binding binding(Queue queue, TopicExchange exchange) {
+    public Binding binding<%= uniqueName %>() {
         return BindingBuilder
-            .bind(queue)
-            .to(exchange)
+            .bind(this.queue<%= uniqueName %>())
+            .to(this.exchange<%= uniqueName %>())
             .with(ROUTING_KEY);
     }
 
