--- a/generators/rabbitmq/templates/src/main/java/package/consumer/RabbitMQConsumer.java.ejs
+++ b/generators/rabbitmq/templates/src/main/java/package/consumer/RabbitMQConsumer.java.ejs
@@ -1,6 +1,6 @@
-package <%= packageName %>.listener;
+package <%= packageName %>.config.rabbitMQ;
 
-import <%= packageName %>.config.RabbitMQConfig;
+import <%= packageName %>.config.RabbitMQConfig<%= uniqueName %>;
 import <%= packageName %>.domain.RabbitMessageModel;
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
 import org.springframework.stereotype.Component;
@@ -8,11 +8,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 @Component
-public class RabbitMQConsumer {
+public class RabbitMQConsumer<%= uniqueName %> {
 
-    private static final Logger logger = LoggerFactory.getLogger(RabbitMQConsumer.class);
+    private static final Logger logger = LoggerFactory.getLogger(RabbitMQConsumer<%= uniqueName %>.class);
 
-    @RabbitListener(queues = RabbitMQConfig.QUEUE)
+    @RabbitListener(queues = RabbitMQConfig<%= uniqueName %>.QUEUE)
     public void listener(RabbitMessageModel message) {
         logger.info("Received message: {}", message);
     }
