--- a/generators/kubernetes/templates/keycloak/keycloak-postgresql.yml.ejs
+++ b/generators/kubernetes/templates/keycloak/keycloak-postgresql.yml.ejs
@@ -29,7 +29,7 @@ spec:
     requests:
       storage: 2Gi
   <%_ if (kubernetesStorageClassName) { _%>
-  storageClassName: <%= kubernetesStorageClassName %>
+  storageClassName: !minkuibe ? <%= kubernetesStorageClassName %> : standard
   <%_ } _%>
 ---
 <%_ } _%>
