--- a/generators/communications/templates/rabbitmq/src/main/java/package/producer/RabbitMQProducer.java.ejs
+++ b/generators/communications/templates/rabbitmq/src/main/java/package/producer/RabbitMQProducer.java.ejs
@@ -1,6 +1,6 @@
 package <%= packageName %>.config.rabbitMQ;
 
-import <%= packageName %>.config.RabbitMQConfig;
+import <%= packageName %>.config.RabbitMQConfig<%= uniqueName %>;
 import <%= packageName %>.domain.RabbitMessageModel;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,9 +13,9 @@ import org.slf4j.LoggerFactory;
 import java.util.Date;
 
 @Component
-public class RabbitMQProducer {
+public class RabbitMQProducer<%= uniqueName %> {
 
-    private static final Logger logger = LoggerFactory.getLogger(RabbitMQProducer.class);
+    private static final Logger logger = LoggerFactory.getLogger(RabbitMQProducer<%= uniqueName %>.class);
 
     @Autowired
     private RabbitTemplate template;
@@ -23,9 +23,9 @@ public class RabbitMQProducer {
     @Scheduled(cron = "0/15 * * * * *")
     public void publishMessage() {
         RabbitMessageModel message = new RabbitMessageModel();
-        message.setMessage("Publishing this message from <%= baseName %> with key: " + RabbitMQConfig.QUEUE);
+        message.setMessage("Publishing this message from <%= baseName %> with key: " + RabbitMQConfig<%= uniqueName %>.QUEUE);
         message.setDateTime(new Date());
-        template.convertAndSend(RabbitMQConfig.EXCHANGE, RabbitMQConfig.ROUTING_KEY, message);
+        template.convertAndSend(RabbitMQConfig<%= uniqueName %>.EXCHANGE, RabbitMQConfig<%= uniqueName %>.ROUTING_KEY, message);
         logger.info("Message Published Successfully");
     }
 }
