GO_MICRO_PROFILE added (#36)
* GO_MICRO_PROFILE added

* changed PROFILE to ACTIVE_PROFILE

--- a/generators/kubernetes/templates/deployment.yml.ejs
+++ b/generators/kubernetes/templates/deployment.yml.ejs
@@ -284,6 +284,8 @@ spec:
         - name: SERVICE_REGISTRY_URL
           value: http://admin:$(JHIPSTER_REGISTRY_PASSWORD)@jhipster-registry.<%= kubernetesNamespace %>.svc.cluster.local:8761/eureka/apps/
           ## GO MICRO ##
+        - name: GO_MICRO_ACTIVE_PROFILE
+          value: prod
         <%_ if (app.prodDatabaseTypePostgres) { _%>
         - name: GO_MICRO_DB_PASSWORD
           valueFrom:
