--- a/generators/react/templates/src/main/webapp/app/modules/home/home.tsx.ejs
+++ b/generators/react/templates/src/main/webapp/app/modules/home/home.tsx.ejs
@@ -35,9 +35,10 @@ import { getLoginUrl, REDIRECT_URL } from 'app/shared/util/url-utils';
 <%_ } _%>
 import { useAppSelector } from 'app/config/store';
 <%_ if(withExample) { _%>
-import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
 import { useNavigate } from 'react-router-dom';
 <%_ } _%>
+import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
+import { faPhone } from '@fortawesome/free-solid-svg-icons';
 
 export const Home = () => {
   const account = useAppSelector(state => state.authentication.account);
@@ -53,168 +54,195 @@ export const Home = () => {
     }
   });
 <%_ } _%>
-<%_ if(withExample) { _%>
-  if(account.login){
-    navigate('/reminder');
-  }
-<%_ } _%>
 
   return (
-    <Row>
-      <%_ if(withExample) { _%>
-        <span></span>
-      <%_ } else { _%>
-      <Col md="3" className="pad">
-        <span className="hipster rounded" />
-      </Col>
-      <Col md="9">
-        <h2><Translate contentKey="home.title">Welcome, <%= backendType %> Hipster!</Translate></h2>
-        <p className="lead"><Translate contentKey="home.subtitle">This is your homepage</Translate></p>
-        <%_ } _%>
-        {
-          (account?.login) ? (
-            <div>
-              <%_ if(withExample) { _%>
-                  <h1 style={{ textAlign: 'center', padding: 50, color: '#012C78' }}>Welcome to <%= capitalizedBaseName %> home page</h1>
-                  <Alert style={{ backgroundColor: '#EDEDED', borderColor: '#EDEDED' }}>
-                    <span style={{ color: '#012C78' }}>
+    <div style={{ backgroundColor: '#dadef7', overflow: 'hidden' }}>
+      {account?.login ? (
+        <div style={{ backgroundColor: '#dadef7' }}>
+        <div
+            style={{
+              display: 'flex',
+              flexDirection: 'row',
+              justifyContent: 'space-between',
+              marginLeft: 150,
+              marginTop: 100,
+              marginBottom: 50,
+            }}
+          >
+            <div style={{ marginTop: 150, marginRight: 50 }}>
+              <h1 style={{ fontSize: '28px', fontWeight: '500' }}>Welcome to <%= capitalizedBaseName %> home page</h1>
+              <span style={{ fontSize: '62px', fontWeight: 800, fontFamily: 'public-sans', color: '#012C78' }}>
+                A stunning React application generated using WDA
+              </span>
+              <br />
+              <br />
+              <h5>
+                <Alert style={{ backgroundColor: '#EDEDED', borderColor: '#EDEDED', marginRight: '50px' }}>
+                  <span style={{ color: '#012C78' }}>
                     <Translate contentKey="home.logged.message" interpolate={{ username: account.login }}>
                       You are logged in as user {account.login}.
                     </Translate>
                   </span>
-                  </Alert>
-                    <br></br>
-                    <div style={{ display: 'flex', flexDirection: 'row', justifyContent: 'space-between' }}>
-                      Here is an example of reminder application, you can click the icon to add your own reminder
-                      <div>
-                        <Link to="/reminder/new" className="btn btn-primary jh-create-entity" id="jh-create-entity" data-cy="entityCreateButton"style={{ backgroundColor: '#CADCFC', borderColor: '#CADCFC' }}
-                        >
-                          <FontAwesomeIcon icon="plus" style={{ color: '#012C78' }} />
-                          &nbsp; <span style={{ color: '#012C78' }}>Create new Reminder</span>
-                        </Link>
-                      </div>
-                    </div>
-              <%_ } else { _%>
-              <Alert color="success">
-                <Translate contentKey="home.logged.message" interpolate={{ username: account.login }}>You are logged in as user {account.login}.</Translate>
-              </Alert>
+                </Alert>
+              </h5>
+              <br />
+              <div style={{ display: 'flex', flexDirection: 'row', alignItems: 'center' }}>
+                <h5>To explore about our products you can refer here</h5>
+                <button
+                  style={{
+                    backgroundColor: '#a6b2ff',
+                    height: '60px',
+                    width: '250px',
+                    borderRadius: '35px',
+                    borderColor: '#a6b2ff',
+                    marginLeft: '20px',
+                  }}
+                  onClick={() => window.open('https://comakeit-tic.github.io/', '_blank')}
+                >
+                  <a
+                    href="http://wda-ui.s3-website.ap-south-1.amazonaws.com/"
+                    target="_blank"
+                    style={{ color: 'black', textDecoration: 'none', fontSize: '18px' }}
+                  >
+                    Explore
+                  </a>
+                </button>
+              </div>
+              <%_ if(withExample) { _%>
+              <div style={{ marginTop: '30px', display: 'flex', flexDirection: 'row', alignItems: 'center' }}>
+                Here is an example of reminder application, you can
+                <Link
+                  to="/reminder"
+                  className="btn btn-primary jh-create-entity"
+                  id="jh-create-entity"
+                  data-cy="entityCreateButton"
+                  style={{
+                    borderColor: 'transparent',
+                    backgroundColor: 'transparent',
+                    padding: '4px',
+                  }}
+                >
+                  <span style={{ color: '#1a256b', fontWeight: '600', borderBottom: '1px solid #1a256b' }}>click here</span>
+                </Link>{' '}
+                to view reminders
+              </div>
               <%_ } _%>
             </div>
-          ) : (
             <div>
-              <%_ if(withExample) { _%>
-                <h1 style={{ textAlign: 'center', padding: 50, color: '#012C78' }}>Welcome to <%= capitalizedBaseName %> home page</h1> 
-                <div
+              <img
+                src="content/images/logo.png"
                 style={{
-                  display: 'flex',
-                  flexDirection: 'row',
-                  justifyContent: 'space-between',
-                  marginLeft: 150,
-                  marginRight: 150,
-                  marginTop: 0,
-                  marginBottom: 50,
-                  color: '#012C78',
+                  width: '750px',
+                  height: '750px',
+                  marginTop: '100px',
+                  left: '376px',
+                  border: '1px solid transparent',
+                  borderTopLeftRadius: '60px',
                 }}
-              >
-                <div>
-                  <img src="content/images/TIC.png" style={{ width: '650px', height: '650px' }}></img>
-                </div>
-                <div style={{marginTop:100}}>
-                  <h5>
-                    Click here to <span></span>
-                    <a href={getLoginUrl()} style={{ color: '#012C78' }}>
-                      sign in
-                    </a>
-                  </h5>
-                  <br />
-                  <h5>This is an application using our WDA</h5>
-                  <h5>
-                    Our products can be found here... &nbsp;
-                    <a href="http://wda-ui.s3-website.ap-south-1.amazonaws.com/" target="_blank" style={{ color: '#012C78' }}>
-                      TIC_HomePage
-                    </a>
-                  </h5>
-                  <br />
-                  <h5>
-                    For more detailed information regarding our project you can refer our &nbsp;
-                    <a href=" https://comakeit-tic.github.io/" target="_blank" style={{ color: '#012C78' }}>
-                      Documentation
-                    </a>
-                  </h5>
-                </div>
-              </div>
-              <%_ } else { _%>
-              <Alert color="warning">
-                <Translate contentKey="global.messages.info.authenticated.prefix">If you want to </Translate>
-                <% if (!enableTranslation) { %><span>&nbsp;</span><% } %>
-<%_ if (authenticationTypeOauth2) { _%>
-                <a href={getLoginUrl()} className="alert-link">
-                  <Translate contentKey="global.messages.info.authenticated.link">sign in</Translate>
-                </a>
-<%_ } else { _%>
-                <Link to="/login" className="alert-link"><Translate contentKey="global.messages.info.authenticated.link"> sign in</Translate></Link>
-<%_ } _%>
-                <Translate contentKey="global.messages.info.authenticated.suffix">, you can try the default accounts:
-                  <br />- Administrator (login=&quot;admin&quot; and password=&quot;admin&quot;)
-                  <br />- User (login=&quot;user&quot; and password=&quot;user&quot;).
-                </Translate>
-              </Alert>
-              
-
-<%_ if (generateUserManagement) { _%>
-              <Alert color="warning">
-                <Translate contentKey="global.messages.info.register.noaccount">You do not have an account yet?</Translate>&nbsp;
-                <Link to="/account/register" className="alert-link"><Translate contentKey="global.messages.info.register.link">Register a new account</Translate></Link>
-              </Alert>
-<%_ } _%>
-<%_ } _%>
+              ></img>
             </div>
-          )
-        }
-        <%_ if(withExample) { _%>
-          <span></span>
-        <%_ } else { _%>
-        <p>
-          <Translate contentKey="home.question">If you have any question on JHipster:</Translate>
-        </p>
-
-        <ul>
-          <li>
-            <a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer">
-              <Translate contentKey="home.link.homepage">JHipster homepage</Translate>
-            </a>
-          </li>
-          <li>
-            <a href="https://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener noreferrer">
-              <Translate contentKey="home.link.stackoverflow">JHipster on Stack Overflow</Translate>
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener noreferrer">
-              <Translate contentKey="home.link.bugtracker">JHipster bug tracker</Translate>
-            </a>
-          </li>
-          <li>
-            <a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">
-              <Translate contentKey="home.link.chat">JHipster public chat room</Translate>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/jhipster" target="_blank" rel="noopener noreferrer">
-              <Translate contentKey="home.link.follow">follow @jhipster on Twitter</Translate>
-            </a>
-          </li>
-        </ul>
-
-        <p>
-          <Translate contentKey="home.like">If you like JHipster, do not forget to give us a star on</Translate>
-          {' '}
-          <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">GitHub</a>!
-        </p>
-      </Col>
-        <%_ } _%>
-    </Row>
+            </div>
+          <div
+            style={{
+              backgroundColor: '#012C78',
+              height: '80px',
+              marginTop: '50px',
+              textAlign: 'center',
+              fontSize: '20px',
+              fontFamily: 'open-sans',
+              paddingTop: '10px',
+            }}
+          >
+            <span style={{ color: '#FFF' }}>TIC-<%= capitalizedBaseName %></span>
+          </div>
+        </div>
+      ) : (
+        <div style={{ backgroundColor: '#dadef7' }}>
+          <div
+            style={{
+              display: 'flex',
+              flexDirection: 'row',
+              justifyContent: 'space-between',
+              marginLeft: 150,
+              marginTop: 100,
+              marginBottom: 50,
+            }}
+          >
+            <div style={{ marginTop: 150, marginRight: 50 }}>
+              <h1 style={{ fontSize: '28px', fontWeight: '500' }}>Welcome to <%= capitalizedBaseName %> home page</h1>
+              <span style={{ fontSize: '62px', fontWeight: 800, fontFamily: 'public-sans', color: '#012C78' }}>
+                A stunning React application generated using WDA
+              </span>
+              <br />
+              <br />
+              <h5>To explore about our products you can refer here</h5>
+              <br />
+              <button
+                style={{
+                  backgroundColor: '#1a256b',
+                  marginRight: '100px',
+                  height: '60px',
+                  width: '250px',
+                  borderRadius: '35px',
+                  borderColor: '#1a256b',
+                }}
+                onClick={() => (window.location.href = getLoginUrl())}
+              >
+                <a href={getLoginUrl()} style={{ color: '#FFF', textDecoration: 'none', fontSize: '18px' }}>
+                  Sign in
+                </a>
+              </button>
+              <button
+                style={{
+                  backgroundColor: '#a6b2ff',
+                  height: '60px',
+                  width: '250px',
+                  borderRadius: '35px',
+                  borderColor: '#a6b2ff',
+                }}
+                onClick={() => window.open('https://comakeit-tic.github.io/', '_blank')}
+              >
+                <a
+                  href="https://comakeit-tic.github.io/"
+                  target="_blank"
+                  style={{ color: 'black', textDecoration: 'none', fontSize: '18px' }}
+                >
+                  Explore
+                </a>
+              </button>
+            </div>
+            <div>
+              <img
+                src="content/images/logo.png"
+                style={{
+                  width: '750px',
+                  height: '750px',
+                  marginTop: '100px',
+                  left: '376px',
+                  border: '1px solid transparent',
+                  borderTopLeftRadius: '60px',
+                }}
+              ></img>
+            </div>
+          </div>
+          <div
+            style={{
+              backgroundColor: '#012C78',
+              height: '80px',
+              marginTop: '50px',
+              textAlign: 'center',
+              fontSize: '20px',
+              fontFamily: 'open-sans',
+              paddingTop: '10px',
+            }}
+          >
+            <span style={{ color: '#FFF' }}>TIC-<%= capitalizedBaseName %></span>
+          </div>
+        </div>
+      )}
+    </div>
   );
 };
+                
 
 export default Home;
