#rakesh UI + Gateway seperation 1. added new example jdl files. 2. issued oauth2 -> no bugs 3. enable cors in application.properties files for prod and dev in server subgenerator 4. enable istio gateway for microservice as well. 5. update deployment and service k8s manifest files for client only. 6. enabled api-docs(swagger) profile in deployment k8s mainfest file. 7. disable protection of api-docs(swagger). 8. enabled generation of comm.yo-rc.json file for single application as well.

--- a/generators/communications/templates/rest-api/src/main/java/package/web/rest/ClientResource.java.ejs
+++ b/generators/communications/templates/rest-api/src/main/java/package/web/rest/ClientResource.java.ejs
@@ -1,6 +1,7 @@
 package <%= packageName %>.web.rest.comm;
-
+<%_ if(authenticationTypeOauth2) { _%>
 import <%= packageName %>.config.webClient.AccessToken;
+<%_ } _%>
 import <%= packageName %>.config.webClient.WebClientConfig;
 
 import org.slf4j.Logger;
@@ -23,6 +24,7 @@ public class ClientResource<%= capitalizeServerName %> {
     @Autowired
     private WebClientConfig webClient;
 
+    <%_ if(authenticationTypeOauth2) { _%>
     @Autowired
     private AccessToken oAuthToken;
 
@@ -32,12 +34,18 @@ public class ClientResource<%= capitalizeServerName %> {
         this.webClient = webClientConfig;
         this.oAuthToken = oAuth;
     }
+    <%_ } else {_%>
+    public ClientResource<%= capitalizeServerName %>(WebClientConfig webClientConfig) {
+        this.webClient = webClientConfig;
+    }
+    <%_ } _%>
 
 
     @GetMapping("/services/<%= serverName %>")
     public Mono<ResponseEntity<Map<String,String>>> getClient() {
         try {
             Map<String,String> response = new HashMap<>();
+            <%_ if(authenticationTypeOauth2) { _%>
             String accessToken = oAuthToken.getToken();
             if(accessToken.isEmpty() || accessToken.isBlank() ){
                 log.error("No access token found");
@@ -45,12 +53,15 @@ public class ClientResource<%= capitalizeServerName %> {
                 response.put("cause","NO_ACCESS_TOKEN");
                 return  Mono.just(ResponseEntity.accepted().body(response));
             }
+            <%_ } _%>
             return webClient
                 .serviceWebClient()
                 .build()
                 .get()
                 .uri("http://<%= serverName %>/api/services/<%= serverName %>")
+                <%_ if(authenticationTypeOauth2) { _%>
                 .header(HttpHeaders.AUTHORIZATION, TOKEN_TYPE + accessToken)
+                <%_ } _%>
                 .retrieve()
                 .bodyToMono(new ParameterizedTypeReference<Map<String, String>>() {
                 }).flatMap(hashmap -> {
