--- a/generators/server/templates/src/main/java/package/config/SecurityConfiguration_imperative.java.ejs
+++ b/generators/server/templates/src/main/java/package/config/SecurityConfiguration_imperative.java.ejs
@@ -190,7 +190,7 @@ public class SecurityConfiguration {
 <%_ if (communicationSpringWebsocket) { _%>
                     .requestMatchers("/websocket/**").authenticated()
 <%_ } _%>
-                    .requestMatchers("/v3/api-docs/**").hasAuthority(AuthoritiesConstants.ADMIN)
+                    .requestMatchers("/v3/api-docs/**").permitAll()
                     .requestMatchers("/management/health").permitAll()
                     .requestMatchers("/management/health/**").permitAll()
                     .requestMatchers("/management/info").permitAll()
