--- a/generators/mongodb/templates/src/main/java/package/config/DatabaseConfiguration.java.ejs
+++ b/generators/mongodb/templates/src/main/java/package/config/DatabaseConfiguration.java.ejs
@@ -40,7 +40,9 @@ import org.springframework.core.convert.converter.Converter;
 import org.springframework.data.elasticsearch.repository.config.Enable<% if (reactive) { %>Reactive<% } %>ElasticsearchRepositories;
 <%_ } _%>
 <%_ if (!reactive) { _%>
+<%_ if ( authenticationTypeJwt || authenticationTypeOauth2 || authenticationTypeSession ) { _%>
 import org.springframework.data.mongodb.config.EnableMongoAuditing;
+<%_ } _%>
 <%_ } _%>
 import org.springframework.data.mongodb.core.convert.MongoCustomConversions;
 import org.springframework.data.mongodb.core.mapping.event.ValidatingMongoEventListener;
@@ -65,7 +67,9 @@ import java.util.List;
 @Import(value = {MongoAutoConfiguration.class, MongoReactiveAutoConfiguration.class})
 <%_ } else { _%>
 @Import(value = MongoAutoConfiguration.class)
+<%_ if ( authenticationTypeJwt || authenticationTypeOauth2 || authenticationTypeSession ) { _%>
 @EnableMongoAuditing(auditorAwareRef = "springSecurityAuditorAware")
+<%_ } _%>
 <%_ } _%>
 public class DatabaseConfiguration {
 
