--- a/generators/server/templates/src/main/java/package/config/SecurityConfiguration_imperative.java.ejs
+++ b/generators/server/templates/src/main/java/package/config/SecurityConfiguration_imperative.java.ejs
@@ -209,12 +209,13 @@ public class SecurityConfiguration {
 <%_ if (communicationSpringWebsocket) { _%>
                     .requestMatchers(mvc.pattern("/websocket/**")).authenticated()
 <%_ } _%>
-                    .requestMatchers(mvc.pattern("/v3/api-docs/**")).hasAuthority(AuthoritiesConstants.ADMIN)
+                    .requestMatchers(mvc.pattern("/v3/api-docs/**")).permitAll()
                     .requestMatchers(mvc.pattern("/management/health")).permitAll()
                     .requestMatchers(mvc.pattern("/management/health/**")).permitAll()
                     .requestMatchers(mvc.pattern("/management/info")).permitAll()
                     .requestMatchers(mvc.pattern("/management/prometheus")).permitAll()
-                    .requestMatchers(mvc.pattern("/management/**")).hasAuthority(AuthoritiesConstants.ADMIN))
+                    .requestMatchers(mvc.pattern("/management/**")).hasAuthority(AuthoritiesConstants.ADMIN)
+                    .requestMatchers(mvc.pattern("/rest/services/**")).permitAll())
 <%_ if (authenticationTypeSession) { _%>
   <%_ if (generateUserManagement) { _%>
             .rememberMe(rememberMe ->
