--- a/generators/liquibase/templates/src/main/resources/config/liquibase/changelog/initial_schema_sql.xml.ejs
+++ b/generators/liquibase/templates/src/main/resources/config/liquibase/changelog/initial_schema_sql.xml.ejs
@@ -182,4 +182,61 @@ _%>
             <column name="local_date" type="date"/>
         </createTable>
     </changeSet>
+
+    <%_ if (prodDatabaseTypePostgres) { _%>
+    
+    <changeSet author="jhipster" id="00000000000003" >
+    <createTable tableName="note">
+        <column  name="id" type="VARCHAR">
+            <constraints primaryKey="true" primaryKeyName="notePK"/>
+        </column>
+        <column name="subject" type="VARCHAR"/>
+        <column name="description" type="VARCHAR"/>
+    </createTable>
+    </changeSet>
+
+    <!-- Insert changeSet for inserting dummy records into the 'note' table -->
+    <changeSet author="jhipster" id="00000000000004">
+        <insert tableName="note">
+            <column name="id" value="1"/>
+            <column name="subject" value="Meeting with Client"/>
+            <column name="description" value="Discuss project requirements and timelines with the client."/>
+        </insert>
+        <insert tableName="note">
+            <column name="id" value="2"/>
+            <column name="subject" value="Research and Development"/>
+            <column name="description" value="Conduct research on the latest technologies for project development."/>
+        </insert>
+        <insert tableName="note">
+            <column name="id" value="3"/>
+            <column name="subject" value="Team Collaboration"/>
+            <column name="description" value="Collaborate with team members to enhance project collaboration and communication."/>
+        </insert>
+        <insert tableName="note">
+            <column name="id" value="4"/>
+            <column name="subject" value="Task Prioritization"/>
+            <column name="description" value="Prioritize tasks for the upcoming sprint based on project goals."/>
+        </insert>
+        <insert tableName="note">
+            <column name="id" value="5"/>
+            <column name="subject" value="Bug Fixing Session"/>
+            <column name="description" value="Identify and fix bugs reported during the testing phase."/>
+        </insert>
+        <insert tableName="note">
+            <column name="id" value="6"/>
+            <column name="subject" value="Training Workshop"/>
+            <column name="description" value="Conduct a workshop to train team members on new tools and technologies."/>
+        </insert>
+        <insert tableName="note">
+            <column name="id" value="7"/>
+            <column name="subject" value="Monthly Review Meeting"/>
+            <column name="description" value="Review project progress and discuss any challenges faced during the month."/>
+        </insert>
+        <insert tableName="note">
+            <column name="id" value="8"/>
+            <column name="subject" value="Documentation Update"/>
+            <column name="description" value="Update project documentation to reflect recent changes and improvements."/>
+        </insert>
+    </changeSet>
+    <%_ } _%>
 </databaseChangeLog>
