fixed package issue updated dispaly name from Jhispter to Keycloak

--- a/generators/docker-compose/templates/realm-config/jhipster-realm.json.ejs
+++ b/generators/docker-compose/templates/realm-config/jhipster-realm.json.ejs
@@ -1,7 +1,7 @@
 {
   "id": "jhipster",
   "realm": "jhipster",
-  "displayName": "JHipster",
+  "displayName": "WeDAA",
   "notBefore": 0,
   "defaultSignatureAlgorithm": "RS256",
   "revokeRefreshToken": false,
