--- a/generators/kubernetes/templates/keycloak/keycloak-configmap.yml.ejs
+++ b/generators/kubernetes/templates/keycloak/keycloak-configmap.yml.ejs
@@ -9,7 +9,7 @@ data:
     {
       "id": "jhipster",
       "realm": "jhipster",
-      "displayName": "JHipster",
+      "displayName": "WeDAA",
       "notBefore": 0,
       "defaultSignatureAlgorithm": "RS256",
       "revokeRefreshToken": false,
