--- a/generators/mongodb/templates/src/main/java/package/config/dbmigrations/NotesInitialDataMigration.java.ejs
+++ b/generators/mongodb/templates/src/main/java/package/config/dbmigrations/NotesInitialDataMigration.java.ejs
@@ -5,8 +5,8 @@ import java.util.List;
 
 import org.springframework.data.mongodb.core.MongoTemplate;
 
-import com.backend.test.domain.Note;
-import com.backend.test.repository.NotesRepository;
+import <%= packageName %>.domain.Note;
+import <%= packageName %>.repository.NotesRepository;
 
 import io.mongock.api.annotations.ChangeUnit;
 import io.mongock.api.annotations.Execution;
