--- a/generators/server/templates/src/main/java/package/domain/Note.java.ejs
+++ b/generators/server/templates/src/main/java/package/domain/Note.java.ejs
@@ -19,19 +19,21 @@ import org.springframework.data.mongodb.core.mapping.Document;
 public class Note {
     @Id
     <%_ if (prodDatabaseTypePostgres) { _%>
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "id", nullable = false)
-    @GeneratedValue(generator = "uuid2")
-    @GenericGenerator(name = "uuid2", strategy = "uuid2")
     <%_ } _%> 
-    private String id;
+    <%_ if (databaseTypeMongodb) { _%>
+    public static final String SEQUENCE_NAME = "note_sequence";
+    <%_ } _%> 
+    private Long id;
 
     private String subject;
 
     private String description;
 
-    public String getId() {return id;}
+    public Long getId() {return id;}
 
-    public void setId(String id) {this.id = id;}
+    public void setId(Long id) {this.id = id;}
 
     public String getSubject() {
         return subject;
