--- a/generators/server/templates/src/main/java/package/web/rest/NotesController.java.ejs
+++ b/generators/server/templates/src/main/java/package/web/rest/NotesController.java.ejs
@@ -27,12 +27,12 @@ public class NotesController {
     }
 
     @PatchMapping
-    public ResponseEntity<Note> updateNote(@RequestParam String id, @RequestBody Note note){
+    public ResponseEntity<Note> updateNote(@RequestParam Long id, @RequestBody Note note){
         return ResponseEntity.ok(notesService.updateNote(id, note));
     }
 
     @DeleteMapping
-    public void deleteNote(@RequestParam String id){
+    public void deleteNote(@RequestParam Long id){
         notesService.deleteNote(id);
     }
 
